Biased locking and large pages additional analysis.